--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -33,7 +33,8 @@ ul, ol { list-style: none; }
 
 /** 重置文本格式元素 **/
 a { text-decoration: none; }
-a:hover { text-decoration: underline; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
 
 
 /** 重置表单元素 **/
